@@ -80,8 +80,6 @@ init(options => {
 # This variable can be used to turn off stripping (see Policy).
 exit 0 if get_buildoption('nostrip');
 
-warning('This tool is experimental and may change (or be retired) without any notice');
-
 my @elf_files;
 
 sub testfile {
