@@ -28,6 +28,11 @@ debhelper (11.3) UNRELEASED; urgency=medium
     had a valid symlink to it.  Thanks to Andreas Hasenack for
     reporting the bug.  (Closes: LP: #1765851)
   * debian/control: Depend on dwz for dh_dwz.
+  * dh_dwz: Generate a per-package multifile by default.  This
+    feature can be disabled by --no-multifile.
+  * dh: Run dh_dwz by default in compat 12.
+  * dh_dwz/dwz.pm: Remove warning about the dwz feature being
+    experimental.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
